# tfprotos-config

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs
examples/virtualgpu/: Cargo.toml  README.md  main.rs
src/: lib.rs  tensorflow.rs
