[package]
name = "tfprotos-config"
version = "0.2.10"
edition = "2021"

[build-dependencies]
prost-build = { version = "0.11", features = ["cleanup-markdown"] }

[dev-dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
tensorflow = { version = "0.19.1", features = ["eager", "tensorflow_gpu"] }

[dependencies]
prost = "0.11"

[[example]]
name = "virtualgpu"
